samples/_failures_safe/1761139594_ee2cec_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ca58ffb3.c: In function ‘main’:
./samples/SAFE/__tmp_ca58ffb3.c:176:5: error: expected declaration or statement at end of input
  176 |     ctx.data_count = 0;
      |     ^~~
